Image Spacing Fix

--- a/css/references.css
+++ b/css/references.css
@@ -68,7 +68,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 950px;
+  top: 1050px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
